kubernetes/clusters/home-k3s/apps/selfhosted/windmill/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
spec:
  hostnames:
    - REDACTED_DOMAIN
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: windmill-app
          port: 8000
